Added header for mobile

--- a/index.html
+++ b/index.html
@@ -8,15 +8,29 @@
     <script src="./assets/script.js"></script>
 </head>
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+<header>
+    <nav>
+        <h1>BLU<span class="blue">E</span>ASY</h1>
+        <ul>
+            <li class="blue home">HOME</li>
+            <li>SERVICES</li>
+            <li>FEATURES</li>
+            <li>PORTFOLIO</li>
+            <li>CONTACT</li>
+        </ul>
+    </nav>
+    <blockquote>
+        <span class="bg-grey">“I’m looking for the unexpected.</span> <br>
+        <span class="bg-grey">I’m looking for things I’ve never seen before.”</span>
+    </blockquote>
+</header>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
 </body>
 </html>
