Added section services and portfolio for mobile

--- a/index.html
+++ b/index.html
@@ -24,7 +24,61 @@
         <span class="bg-grey">I’m looking for things I’ve never seen before.”</span>
     </blockquote>
 </header>
-<div></div>
+<main>
+    <section class="service">
+        <h2 class="white"><span class="underline">SER</span>VICES</h2>
+        <div class="content">
+            <article class="coffee">
+                <img src="./assets/images/coffee.png" alt="coffee icon" class="service">
+                <h3 class="white service">COFFEE</h3>
+                <p class="white service">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice
+                    bear claw. Jujubes carrot
+                    cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+            </article>
+            <article class="instant">
+                <img src="./assets/images/instant.png" alt="camera icon" class="service">
+                <h3 class="white service">INSTANT</h3>
+                <p class="white service">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice
+                    bear claw. Jujubes carrot
+                    cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+            </article>
+            <article class="serious">
+                <img src="./assets/images/serious.png" alt="erious icon" class="service">
+                <h3 class="white service">SERIOUS</h3>
+                <p class="white service">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice
+                    bear claw. Jujubes carrot
+                    cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+            </article>
+            <article class="frame">
+                <img src="./assets/images/frame.png" alt="picture icon" class="service">
+                <h3 class="white service">FRAME</h3>
+                <p class="white service">Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice
+                    bear claw. Jujubes carrot
+                    cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+            </article>
+        </div>
+    </section>
+    <section class="portfolio">
+        <h2><span class="underline">POR</span>FOLIO</h2>
+        <ul>
+            <li class="blue home btn-pf-all">ALL</li>
+            <li class="btn-pf-panoramas">PANORAMAS</li>
+            <li class="btn-pf-portraits">PORTRAITS</li>
+            <li class="btn-pf-macro">MACRO</li>
+            <li class="btn-pf-journal">JOURNAL</li>
+        </ul>
+        <div class="imgs-pf">
+            <img class="img-pf macro hide" src="./assets/images/portfolio_photo1.png" alt="black and white sea bridge photography">
+            <img class="img-pf macro hide" src="./assets/images/portfolio_photo2.png" alt="bridge photography in mist in black and white">
+            <img class="img-pf journal hide" src="./assets/images/portfolio_photo3.png" alt="photograph of a small island in black and white">
+            <img class="img-pf journal hide" src="./assets/images/portfolio_photo4.png" alt="photograph of a tree on an island in black and white">
+            <img class="img-pf macro hide" src="./assets/images/portfolio_photo5.png" alt="photograph of a cabin in the woods in black and white">
+            <img class="img-pf portraits hide" src="./assets/images/portfolio_photo6.png" alt="photograph of a surfer in black and white">
+            <img class="img-pf panoramas hide" src="./assets/images/portfolio_photo7.png" alt="photograph of a snowy mountain in black and white">
+            <img class="img-pf panoramas hide" src="./assets/images/portfolio_photo8.png" alt="photograph of a snowy mountain in black and white">
+        </div>
+    </section>
+</main>
 <div></div>
 <div></div>
 <div></div>
