Added just default section for mobile

--- a/index.html
+++ b/index.html
@@ -68,23 +68,41 @@
             <li class="btn-pf-journal">JOURNAL</li>
         </ul>
         <div class="imgs-pf">
-            <img class="img-pf macro hide" src="./assets/images/portfolio_photo1.png" alt="black and white sea bridge photography">
-            <img class="img-pf macro hide" src="./assets/images/portfolio_photo2.png" alt="bridge photography in mist in black and white">
-            <img class="img-pf journal hide" src="./assets/images/portfolio_photo3.png" alt="photograph of a small island in black and white">
-            <img class="img-pf journal hide" src="./assets/images/portfolio_photo4.png" alt="photograph of a tree on an island in black and white">
-            <img class="img-pf macro hide" src="./assets/images/portfolio_photo5.png" alt="photograph of a cabin in the woods in black and white">
-            <img class="img-pf portraits hide" src="./assets/images/portfolio_photo6.png" alt="photograph of a surfer in black and white">
-            <img class="img-pf panoramas hide" src="./assets/images/portfolio_photo7.png" alt="photograph of a snowy mountain in black and white">
-            <img class="img-pf panoramas hide" src="./assets/images/portfolio_photo8.png" alt="photograph of a snowy mountain in black and white">
+            <img class="img-pf macro hide" src="./assets/images/portfolio_photo1.png"
+                 alt="black and white sea bridge photography">
+            <img class="img-pf macro hide" src="./assets/images/portfolio_photo2.png"
+                 alt="bridge photography in mist in black and white">
+            <img class="img-pf journal hide" src="./assets/images/portfolio_photo3.png"
+                 alt="photograph of a small island in black and white">
+            <img class="img-pf journal hide" src="./assets/images/portfolio_photo4.png"
+                 alt="photograph of a tree on an island in black and white">
+            <img class="img-pf macro hide" src="./assets/images/portfolio_photo5.png"
+                 alt="photograph of a cabin in the woods in black and white">
+            <img class="img-pf portraits hide" src="./assets/images/portfolio_photo6.png"
+                 alt="photograph of a surfer in black and white">
+            <img class="img-pf panoramas hide" src="./assets/images/portfolio_photo7.png"
+                 alt="photograph of a snowy mountain in black and white">
+            <img class="img-pf panoramas hide" src="./assets/images/portfolio_photo8.png"
+                 alt="photograph of a snowy mountain in black and white">
         </div>
     </section>
+    <section class="jds">
+        <h2 class="white"><span class="underline">JUS</span>T DEFAULT SECTION</h2>
+        <article>
+            <p class="white lighter">Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame
+                snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake
+                brownie.
+            </p>
+            <br>
+            <p class="white lighter">
+                Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I
+                love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes
+                toffee.
+            </p>
+            <button class="jsd">VISIT ME</button>
+            <img class="video" src="./assets/images/video.png" alt="video of a beach in black and white">
+        </article>
+    </section>
 </main>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
 </body>
 </html>
