--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
     <section class="jds">
         <h2 class="white"><span class="underline">JUS</span>T DEFAULT SECTION</h2>
         <article>
-            <p class="white lighter">Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame
+            <p class="white lighter">Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears
+                pastry gummi bears sesame
                 snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake
                 brownie.
             </p>
@@ -102,6 +103,15 @@
             <button class="jsd">VISIT ME</button>
             <img class="video" src="./assets/images/video.png" alt="video of a beach in black and white">
         </article>
+    </section>
+    <section class="twitter">
+        <div class="twitter-header">
+            <h2 class="white"><span class="underline">TWI</span>TTER</h2>
+            <img src="./assets/images/icon-twitter.png" alt="twitter icon" width="28" height="22">
+        </div>
+        <p class="white lighter">Unerdwear cookie liquorice. Cake donut cupcake lollipop soufflé candy. Chocolate oat
+            cake <span class="bold">@cheesecake</span> tootsie
+            roll.</p>
     </section>
 </main>
 </body>
