Added section testimonials for mobile

--- a/index.html
+++ b/index.html
@@ -117,31 +117,45 @@
         <h2 class="white"><span class="underline">WH</span>O IS JOHN DOE?</h2>
         <article class="who-is">
             <div class="white part1">
-                <p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears
+                <p class="lighter">Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry
+                    gummi bears
                     sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies
                     cheesecake brownie.
                 </p>
                 <br>
-                <p>
+                <p class="lighter">
                     Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice
                     cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy
                     canes toffee.
                 </p>
             </div>
             <div class="white part2">
-                <p>
+                <p class="lighter">
                     Pudding dessert jujubes tiramisu gingerbread croissant tiramisu applicake. Sesame snaps sugar plum
                     cotton candy chocolate bonbon lemon drops candy canes cotton candy. Cake toffee pie bear claw
                     pastry.
                 </p>
                 <div>
-                    <img class="icon-who-is" src="./assets/images/icon-twitter.png" alt="twitter icon" height="28" width="28">
-                    <img class="icon-who-is" src="./assets/images/icon-google-plus.png" alt="google+ icon" height="28" width="28">
-                    <img class="icon-who-is" src="./assets/images/icon-dribbble.png" alt="dribble icon" height="28" width="28">
-                    <img class="icon-who-is" src="./assets/images/icon-coffee.png" alt="coffee icon" height="28" width="28">
+                    <img class="icon-who-is" src="./assets/images/icon-twitter.png" alt="twitter icon" height="28"
+                         width="28">
+                    <img class="icon-who-is" src="./assets/images/icon-google-plus.png" alt="google+ icon" height="28"
+                         width="28">
+                    <img class="icon-who-is" src="./assets/images/icon-dribbble.png" alt="dribble icon" height="28"
+                         width="28">
+                    <img class="icon-who-is" src="./assets/images/icon-coffee.png" alt="coffee icon" height="28"
+                         width="28">
                 </div>
             </div>
         </article>
+    </section>
+    <section class="testimonials">
+        <h2 class="grey"><span class="underline">TES</span>TIMONIALS</h2>
+        <blockquote class="grey" cite="Walter White">
+            Applicake chocolate cake wafer toffee pie soufflé wafer. Tart marshmallow wafer macaroon cheesecake jelly.
+            Gingerbread cookie soufflé sweet roll sweet roll jelly-o.
+        </blockquote>
+        <br>
+        <p class="blue w-w">-Walter White</p>
     </section>
 </main>
 </body>
