Added section contact for mobile

--- a/index.html
+++ b/index.html
@@ -157,6 +157,38 @@
         <br>
         <p class="blue w-w">-Walter White</p>
     </section>
+    <section class="contact white">
+        <h2><span class="underline">CO</span>NTACT</h2>
+        <form>
+            <div class="part1">
+                <p class="contact lighter">
+                    Jujubes bear claw croissant wafer sweet lemon drops brownie chocolate bar. Sweet lollipop halvah
+                    tootsie roll cake fruitcake. Chocolate cake chocolate bar gingerbread lollipop tart. Jujubes bear
+                    claw donut chupa chups.
+                    <br><br>
+                    Linda Newman
+                    <br>
+                    W325 State Road 123
+                    <br>
+                    Mondovi, WI(Wisconsin) 98746-54321
+                    <br>
+                    (715) 946 - 1234
+                    <br>
+                </p>
+                <div>
+                    <label for="full-name">FULL NAME</label><br>
+                    <input type="text" id="full-name"><br>
+                    <label for="email">EMAIL</label><br>
+                    <input type="email" id="email">
+                </div>
+            </div>
+            <div class="part2">
+                <label for="message">MESSAGE</label><br>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                <input type="submit" value="MESSAGE" class="send white">
+            </div>
+        </form>
+    </section>
 </main>
 </body>
 </html>
