Added style for media tablette

--- a/index.html
+++ b/index.html
@@ -190,5 +190,14 @@
         </form>
     </section>
 </main>
+<footer>
+    <ul>
+        <li>HOME | </li>
+        <li>SERVICES | </li>
+        <li>PORTFOLIO | </li>
+        <li>CONTACT</li>
+    </ul>
+    <p class="copyright">2013 ©</p>
+</footer>
 </body>
 </html>
