Added media queries for desktop

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </ul>
     </nav>
     <blockquote>
-        <span class="bg-grey">“I’m looking for the unexpected.</span> <br>
-        <span class="bg-grey">I’m looking for things I’ve never seen before.”</span>
+        <span class="bg-grey lighter">“I’m looking for the unexpected.</span> <br>
+        <span class="bg-grey lighter">I’m looking for things I’ve never seen before.”</span>
     </blockquote>
 </header>
 <main>
@@ -68,33 +68,32 @@
             <li class="btn-pf-journal">JOURNAL</li>
         </ul>
         <div class="imgs-pf">
-            <img class="img-pf macro hide" src="./assets/images/portfolio_photo1.png"
+            <img class="img-pf macro" src="./assets/images/portfolio_photo1.png"
                  alt="black and white sea bridge photography">
-            <img class="img-pf macro hide" src="./assets/images/portfolio_photo2.png"
+            <img class="img-pf macro" src="./assets/images/portfolio_photo2.png"
                  alt="bridge photography in mist in black and white">
-            <img class="img-pf journal hide" src="./assets/images/portfolio_photo3.png"
+            <img class="img-pf journal" src="./assets/images/portfolio_photo3.png"
                  alt="photograph of a small island in black and white">
-            <img class="img-pf journal hide" src="./assets/images/portfolio_photo4.png"
+            <img class="img-pf journal" src="./assets/images/portfolio_photo4.png"
                  alt="photograph of a tree on an island in black and white">
-            <img class="img-pf macro hide" src="./assets/images/portfolio_photo5.png"
+            <img class="img-pf macro" src="./assets/images/portfolio_photo5.png"
                  alt="photograph of a cabin in the woods in black and white">
-            <img class="img-pf portraits hide" src="./assets/images/portfolio_photo6.png"
+            <img class="img-pf portraits" src="./assets/images/portfolio_photo6.png"
                  alt="photograph of a surfer in black and white">
-            <img class="img-pf panoramas hide" src="./assets/images/portfolio_photo7.png"
+            <img class="img-pf panoramas" src="./assets/images/portfolio_photo7.png"
                  alt="photograph of a snowy mountain in black and white">
-            <img class="img-pf panoramas hide" src="./assets/images/portfolio_photo8.png"
+            <img class="img-pf panoramas" src="./assets/images/portfolio_photo8.png"
                  alt="photograph of a snowy mountain in black and white">
         </div>
     </section>
     <section class="jds">
         <h2 class="white"><span class="underline">JUS</span>T DEFAULT SECTION</h2>
-        <article>
+        <article class="jds">
             <p class="white lighter">Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears
                 pastry gummi bears sesame
                 snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake
                 brownie.
             </p>
-            <br>
             <p class="white lighter">
                 Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I
                 love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes
@@ -149,7 +148,10 @@
         </article>
     </section>
     <section class="testimonials">
+        <div class="testimonials-header">
         <h2 class="grey"><span class="underline">TES</span>TIMONIALS</h2>
+        <img src="./assets/images/”.png" alt="” icon">
+        </div>
         <blockquote class="grey" cite="Walter White">
             Applicake chocolate cake wafer toffee pie soufflé wafer. Tart marshmallow wafer macaroon cheesecake jelly.
             Gingerbread cookie soufflé sweet roll sweet roll jelly-o.
@@ -175,7 +177,7 @@
                     (715) 946 - 1234
                     <br>
                 </p>
-                <div>
+                <div class="form">
                     <label for="full-name">FULL NAME</label><br>
                     <input type="text" id="full-name"><br>
                     <label for="email">EMAIL</label><br>
