--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="presentation of blueasy">
     <title>BLUEASY</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles.css">
@@ -61,7 +62,7 @@
     <section class="portfolio" id="a-portfolio">
         <h2><span class="underline">POR</span>FOLIO</h2>
         <ul>
-            <li class="home btn-pf-all selected"><button>ALL</button></li>
+            <li class="btn-pf-all selected"><button>ALL</button></li>
             <li class="btn-pf-panoramas"><button>PANORAMAS</button></li>
             <li class="btn-pf-portraits"><button>PORTRAITS</button></li>
             <li class="btn-pf-macro"><button>MACRO</button></li>
@@ -152,7 +153,7 @@
         <h2 class="grey"><span class="underline">TES</span>TIMONIALS</h2>
         <img src="./assets/images/”.png" alt="” icon">
         </div>
-        <blockquote class="grey" cite="Walter White">
+        <blockquote class="grey" cite="https://fr.wikipedia.org/wiki/Walter_White_(personnage)">
             Applicake chocolate cake wafer toffee pie soufflé wafer. Tart marshmallow wafer macaroon cheesecake jelly.
             Gingerbread cookie soufflé sweet roll sweet roll jelly-o.
         </blockquote>
